terraform/aws/wazuh/instance.tf
#instance.tf
import {
  to = aws_instance.aws-wazuh-01
  id = "i-064cc9d2aee7f0a37"   # 위 명령 결과로 나온 ID
}
resource "aws_key_pair" "aws-wazuh-key" {
  key_name   = "aws-wazuh-key"
  public_key = var.ssh_public_key

  tags = {
    Name  = "aws-wazuh-key"
    Owner = "st2"
  }
}

resource "aws_instance" "aws-wazuh-01" {
  ami                    = "ami-04b89ed6456e4186e"
  instance_type          = "t3.large"
  subnet_id              = data.aws_subnet.aws-app-sub-2a.id
  vpc_security_group_ids = [aws_security_group.aws-wazuh-sg.id]
  key_name               = aws_key_pair.aws-wazuh-key.key_name
  iam_instance_profile   = aws_iam_instance_profile.aws-wazuh-profile.name
  private_ip             = var.wazuh_01_private_ip
  root_block_device {
    volume_size = 50
    volume_type = "gp3"
    encrypted   = true 
  }

  tags = {
    Name  = "aws-wazuh-01"
    Owner = "st2"
  }
}
